[package]
name = "autolight"
version = "0.1.1"
authors = ["nasso <nassomails@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
ctrlc = "3"
hotwatch = "0.4"
win32_notification = "0.1"
serde = { version = "1", features = ["derive"] }
sunrise = "1"
toml = "0.5"
anyhow = "1"

[dependencies.windows]
version = "0.39"
features = ["Win32_System_Registry", "Win32_Foundation", "Win32_Security", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_ProcessStatus"]
